Allow creating and deleting email account aliases
