# docs/openapi.json
@@ -405,6 +405,28 @@
         },
         "required": ["currentValues", "correctValues", "errors", "warnings"]
       },
+      "Address": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "example": "59cb948ad80a820b68f05230",
+            "description": "The unique id of the email account",
+            "readOnly": true
+          },
+          "name": {
+            "type": "string",
+            "example": "John Doe",
+            "description": "The name of the email account"
+          },
+          "address": {
+            "type": "string",
+            "example": "john@example.com",
+            "description": "The E-Mail address of the email account"
+          }
+        },
+        "required": ["id", "name", "address"]
+      },
       "AccountListItemQuota": {
         "type": "object",
         "properties": {
@@ -427,7 +449,8 @@
           "id": {
             "type": "string",
             "example": "59cb948ad80a820b68f05230",
-            "description": "The unique id of the email account"
+            "description": "The unique id of the email account",
+            "readOnly": true
           },
           "name": {
             "type": "string",
@@ -444,6 +467,11 @@
             "example": false,
             "description": "If true then the account can not authenticate or receive any new mail"
           },
+          "aliases": {
+            "description": "List of aliases for this account",
+            "type": "array",
+            "items": { "$ref": "#/components/schemas/Address" }
+          },
           "quota": {
             "allOf": [
               { "$ref": "#/components/schemas/AccountListItemQuota" },
@@ -451,7 +479,7 @@
             ]
           }
         },
-        "required": ["id", "name", "address", "disabled", "quota"]
+        "required": ["id", "name", "address", "disabled", "aliases", "quota"]
       },
       "AccountDetailsLimitsQuota": {
         "type": "object",
@@ -574,7 +602,8 @@
           "id": {
             "type": "string",
             "example": "59cb948ad80a820b68f05230",
-            "description": "The unique id of the email account"
+            "description": "The unique id of the email account",
+            "readOnly": true
           },
           "name": {
             "type": "string",
@@ -590,6 +619,11 @@
             "type": "boolean",
             "example": false,
             "description": "If true then the account can not authenticate or receive any new mail"
+          },
+          "aliases": {
+            "description": "List of aliases for this account",
+            "type": "array",
+            "items": { "$ref": "#/components/schemas/Address" }
           },
           "spamLevel": {
             "type": "number",
@@ -614,6 +648,7 @@
           "name",
           "address",
           "disabled",
+          "aliases",
           "spamLevel",
           "disabledScopes",
           "limits"
@@ -2024,7 +2059,7 @@
           "200": { "description": "Domain successfully deleted" },
           "400": { "description": "Bad user input" },
           "401": { "description": "Invalid or expired token" },
-          "404": { "description": "Domain not found on account" }
+          "404": { "description": "Domain not found on user" }
         },
         "tags": ["Domains"],
         "security": [{ "bearer": [] }],
@@ -2224,7 +2259,7 @@
           },
           "400": { "description": "Bad user input" },
           "401": { "description": "Invalid or expired token" },
-          "404": { "description": "Domain not found on account" }
+          "404": { "description": "Domain not found on user" }
         },
         "tags": ["Domains"],
         "security": [{ "bearer": [] }],
@@ -2297,7 +2332,7 @@
           "201": { "description": "Alias successfully added" },
           "400": { "description": "Bad user input" },
           "401": { "description": "Invalid or expired token" },
-          "404": { "description": "Domain not found on account" }
+          "404": { "description": "Domain not found on user" }
         },
         "tags": ["Domains"],
         "security": [{ "bearer": [] }],
@@ -2366,10 +2401,10 @@
           }
         ],
         "responses": {
-          "201": { "description": "Alias successfully deleted" },
+          "200": { "description": "Alias successfully deleted" },
           "400": { "description": "Bad user input" },
           "401": { "description": "Invalid or expired token" },
-          "404": { "description": "Domain not found on account" }
+          "404": { "description": "Domain not found on user" }
         },
         "tags": ["Domains"],
         "security": [{ "bearer": [] }],
@@ -2747,6 +2782,151 @@
             "lang": "C",
             "label": "C",
             "source": "CURL *hnd = curl_easy_init();\n\ncurl_easy_setopt(hnd, CURLOPT_CUSTOMREQUEST, \"POST\");\ncurl_easy_setopt(hnd, CURLOPT_URL, \"http://localhost:3000/accounts\");\n\nstruct curl_slist *headers = NULL;\nheaders = curl_slist_append(headers, \"content-type: application/json\");\nheaders = curl_slist_append(headers, \"authorization: Bearer REPLACE_BEARER_TOKEN\");\ncurl_easy_setopt(hnd, CURLOPT_HTTPHEADER, headers);\n\ncurl_easy_setopt(hnd, CURLOPT_POSTFIELDS, \"{\\\"name\\\":\\\"John Doe\\\",\\\"spamLevel\\\":50,\\\"limits\\\":{\\\"quota\\\":1073741824,\\\"send\\\":200,\\\"receive\\\":1000,\\\"forward\\\":100},\\\"disabledScopes\\\":[\\\"imap\\\",\\\"pop3\\\"],\\\"address\\\":\\\"john@example.com\\\",\\\"password\\\":\\\"verysecret\\\"}\");\n\nCURLcode ret = curl_easy_perform(hnd);"
+          }
+        ]
+      }
+    },
+    "/accounts/{accountId}/aliases": {
+      "post": {
+        "operationId": "addAccountAlias",
+        "summary": "Add an account alias",
+        "parameters": [
+          {
+            "name": "accountId",
+            "required": true,
+            "in": "path",
+            "description": "Unique id of the account",
+            "schema": { "type": "string" }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/Address" }
+            }
+          }
+        },
+        "responses": {
+          "201": { "description": "Alias successfully added" },
+          "400": { "description": "Bad user input" },
+          "401": { "description": "Invalid or expired token" },
+          "404": { "description": "No account found with this id" }
+        },
+        "tags": ["Email Accounts"],
+        "security": [{ "bearer": [] }],
+        "x-code-samples": [
+          {
+            "lang": "Shell",
+            "label": "Curl",
+            "source": "curl --request POST \\\n  --url http://localhost:3000/accounts/%7BaccountId%7D/aliases \\\n  --header 'authorization: Bearer REPLACE_BEARER_TOKEN' \\\n  --header 'content-type: application/json' \\\n  --data '{\"name\":\"John Doe\",\"address\":\"john@example.com\"}'"
+          },
+          {
+            "lang": "JavaScript",
+            "label": "Node.js",
+            "source": "var http = require(\"http\");\n\nvar options = {\n  \"method\": \"POST\",\n  \"hostname\": \"localhost\",\n  \"port\": \"3000\",\n  \"path\": \"/accounts/%7BaccountId%7D/aliases\",\n  \"headers\": {\n    \"content-type\": \"application/json\",\n    \"authorization\": \"Bearer REPLACE_BEARER_TOKEN\"\n  }\n};\n\nvar req = http.request(options, function (res) {\n  var chunks = [];\n\n  res.on(\"data\", function (chunk) {\n    chunks.push(chunk);\n  });\n\n  res.on(\"end\", function () {\n    var body = Buffer.concat(chunks);\n    console.log(body.toString());\n  });\n});\n\nreq.write(JSON.stringify({name: 'John Doe', address: 'john@example.com'}));\nreq.end();"
+          },
+          {
+            "lang": "JavaScript",
+            "label": "JavaScript",
+            "source": "var data = JSON.stringify({\n  \"name\": \"John Doe\",\n  \"address\": \"john@example.com\"\n});\n\nvar xhr = new XMLHttpRequest();\nxhr.withCredentials = true;\n\nxhr.addEventListener(\"readystatechange\", function () {\n  if (this.readyState === this.DONE) {\n    console.log(this.responseText);\n  }\n});\n\nxhr.open(\"POST\", \"http://localhost:3000/accounts/%7BaccountId%7D/aliases\");\nxhr.setRequestHeader(\"content-type\", \"application/json\");\nxhr.setRequestHeader(\"authorization\", \"Bearer REPLACE_BEARER_TOKEN\");\n\nxhr.send(data);"
+          },
+          {
+            "lang": "Python",
+            "label": "Python3",
+            "source": "import http.client\n\nconn = http.client.HTTPConnection(\"localhost:3000\")\n\npayload = \"{\\\"name\\\":\\\"John Doe\\\",\\\"address\\\":\\\"john@example.com\\\"}\"\n\nheaders = {\n    'content-type': \"application/json\",\n    'authorization': \"Bearer REPLACE_BEARER_TOKEN\"\n    }\n\nconn.request(\"POST\", \"/accounts/%7BaccountId%7D/aliases\", payload, headers)\n\nres = conn.getresponse()\ndata = res.read()\n\nprint(data.decode(\"utf-8\"))"
+          },
+          {
+            "lang": "PHP",
+            "label": "PHP",
+            "source": "<?php\n\n$curl = curl_init();\n\ncurl_setopt_array($curl, array(\n  CURLOPT_PORT => \"3000\",\n  CURLOPT_URL => \"http://localhost:3000/accounts/%7BaccountId%7D/aliases\",\n  CURLOPT_RETURNTRANSFER => true,\n  CURLOPT_ENCODING => \"\",\n  CURLOPT_MAXREDIRS => 10,\n  CURLOPT_TIMEOUT => 30,\n  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,\n  CURLOPT_CUSTOMREQUEST => \"POST\",\n  CURLOPT_POSTFIELDS => \"{\\\"name\\\":\\\"John Doe\\\",\\\"address\\\":\\\"john@example.com\\\"}\",\n  CURLOPT_HTTPHEADER => array(\n    \"authorization: Bearer REPLACE_BEARER_TOKEN\",\n    \"content-type: application/json\"\n  ),\n));\n\n$response = curl_exec($curl);\n$err = curl_error($curl);\n\ncurl_close($curl);\n\nif ($err) {\n  echo \"cURL Error #:\" . $err;\n} else {\n  echo $response;\n}"
+          },
+          {
+            "lang": "Java",
+            "label": "Java",
+            "source": "HttpResponse<String> response = Unirest.post(\"http://localhost:3000/accounts/%7BaccountId%7D/aliases\")\n  .header(\"content-type\", \"application/json\")\n  .header(\"authorization\", \"Bearer REPLACE_BEARER_TOKEN\")\n  .body(\"{\\\"name\\\":\\\"John Doe\\\",\\\"address\\\":\\\"john@example.com\\\"}\")\n  .asString();"
+          },
+          {
+            "lang": "C#",
+            "label": "C#",
+            "source": "var client = new RestClient(\"http://localhost:3000/accounts/%7BaccountId%7D/aliases\");\nvar request = new RestRequest(Method.POST);\nrequest.AddHeader(\"content-type\", \"application/json\");\nrequest.AddHeader(\"authorization\", \"Bearer REPLACE_BEARER_TOKEN\");\nrequest.AddParameter(\"application/json\", \"{\\\"name\\\":\\\"John Doe\\\",\\\"address\\\":\\\"john@example.com\\\"}\", ParameterType.RequestBody);\nIRestResponse response = client.Execute(request);"
+          },
+          {
+            "lang": "C",
+            "label": "C",
+            "source": "CURL *hnd = curl_easy_init();\n\ncurl_easy_setopt(hnd, CURLOPT_CUSTOMREQUEST, \"POST\");\ncurl_easy_setopt(hnd, CURLOPT_URL, \"http://localhost:3000/accounts/%7BaccountId%7D/aliases\");\n\nstruct curl_slist *headers = NULL;\nheaders = curl_slist_append(headers, \"content-type: application/json\");\nheaders = curl_slist_append(headers, \"authorization: Bearer REPLACE_BEARER_TOKEN\");\ncurl_easy_setopt(hnd, CURLOPT_HTTPHEADER, headers);\n\ncurl_easy_setopt(hnd, CURLOPT_POSTFIELDS, \"{\\\"name\\\":\\\"John Doe\\\",\\\"address\\\":\\\"john@example.com\\\"}\");\n\nCURLcode ret = curl_easy_perform(hnd);"
+          }
+        ]
+      }
+    },
+    "/accounts/{accountId}/aliases/{aliasId}": {
+      "delete": {
+        "operationId": "deleteAccountAlias",
+        "summary": "Delete an account alias",
+        "parameters": [
+          {
+            "name": "accountId",
+            "required": true,
+            "in": "path",
+            "description": "Unique id of the account",
+            "schema": { "type": "string" }
+          },
+          {
+            "name": "aliasId",
+            "required": true,
+            "in": "path",
+            "description": "Unique id of the alias",
+            "schema": { "type": "string" }
+          }
+        ],
+        "responses": {
+          "200": { "description": "Alias successfully deleted" },
+          "400": { "description": "Bad user input" },
+          "401": { "description": "Invalid or expired token" },
+          "404": { "description": "No account or alias found with this id" }
+        },
+        "tags": ["Email Accounts"],
+        "security": [{ "bearer": [] }],
+        "x-code-samples": [
+          {
+            "lang": "Shell",
+            "label": "Curl",
+            "source": "curl --request DELETE \\\n  --url http://localhost:3000/accounts/%7BaccountId%7D/aliases/%7BaliasId%7D \\\n  --header 'authorization: Bearer REPLACE_BEARER_TOKEN'"
+          },
+          {
+            "lang": "JavaScript",
+            "label": "Node.js",
+            "source": "var http = require(\"http\");\n\nvar options = {\n  \"method\": \"DELETE\",\n  \"hostname\": \"localhost\",\n  \"port\": \"3000\",\n  \"path\": \"/accounts/%7BaccountId%7D/aliases/%7BaliasId%7D\",\n  \"headers\": {\n    \"authorization\": \"Bearer REPLACE_BEARER_TOKEN\"\n  }\n};\n\nvar req = http.request(options, function (res) {\n  var chunks = [];\n\n  res.on(\"data\", function (chunk) {\n    chunks.push(chunk);\n  });\n\n  res.on(\"end\", function () {\n    var body = Buffer.concat(chunks);\n    console.log(body.toString());\n  });\n});\n\nreq.end();"
+          },
+          {
+            "lang": "JavaScript",
+            "label": "JavaScript",
+            "source": "var data = null;\n\nvar xhr = new XMLHttpRequest();\nxhr.withCredentials = true;\n\nxhr.addEventListener(\"readystatechange\", function () {\n  if (this.readyState === this.DONE) {\n    console.log(this.responseText);\n  }\n});\n\nxhr.open(\"DELETE\", \"http://localhost:3000/accounts/%7BaccountId%7D/aliases/%7BaliasId%7D\");\nxhr.setRequestHeader(\"authorization\", \"Bearer REPLACE_BEARER_TOKEN\");\n\nxhr.send(data);"
+          },
+          {
+            "lang": "Python",
+            "label": "Python3",
+            "source": "import http.client\n\nconn = http.client.HTTPConnection(\"localhost:3000\")\n\nheaders = { 'authorization': \"Bearer REPLACE_BEARER_TOKEN\" }\n\nconn.request(\"DELETE\", \"/accounts/%7BaccountId%7D/aliases/%7BaliasId%7D\", headers=headers)\n\nres = conn.getresponse()\ndata = res.read()\n\nprint(data.decode(\"utf-8\"))"
+          },
+          {
+            "lang": "PHP",
+            "label": "PHP",
+            "source": "<?php\n\n$curl = curl_init();\n\ncurl_setopt_array($curl, array(\n  CURLOPT_PORT => \"3000\",\n  CURLOPT_URL => \"http://localhost:3000/accounts/%7BaccountId%7D/aliases/%7BaliasId%7D\",\n  CURLOPT_RETURNTRANSFER => true,\n  CURLOPT_ENCODING => \"\",\n  CURLOPT_MAXREDIRS => 10,\n  CURLOPT_TIMEOUT => 30,\n  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,\n  CURLOPT_CUSTOMREQUEST => \"DELETE\",\n  CURLOPT_HTTPHEADER => array(\n    \"authorization: Bearer REPLACE_BEARER_TOKEN\"\n  ),\n));\n\n$response = curl_exec($curl);\n$err = curl_error($curl);\n\ncurl_close($curl);\n\nif ($err) {\n  echo \"cURL Error #:\" . $err;\n} else {\n  echo $response;\n}"
+          },
+          {
+            "lang": "Java",
+            "label": "Java",
+            "source": "HttpResponse<String> response = Unirest.delete(\"http://localhost:3000/accounts/%7BaccountId%7D/aliases/%7BaliasId%7D\")\n  .header(\"authorization\", \"Bearer REPLACE_BEARER_TOKEN\")\n  .asString();"
+          },
+          {
+            "lang": "C#",
+            "label": "C#",
+            "source": "var client = new RestClient(\"http://localhost:3000/accounts/%7BaccountId%7D/aliases/%7BaliasId%7D\");\nvar request = new RestRequest(Method.DELETE);\nrequest.AddHeader(\"authorization\", \"Bearer REPLACE_BEARER_TOKEN\");\nIRestResponse response = client.Execute(request);"
+          },
+          {
+            "lang": "C",
+            "label": "C",
+            "source": "CURL *hnd = curl_easy_init();\n\ncurl_easy_setopt(hnd, CURLOPT_CUSTOMREQUEST, \"DELETE\");\ncurl_easy_setopt(hnd, CURLOPT_URL, \"http://localhost:3000/accounts/%7BaccountId%7D/aliases/%7BaliasId%7D\");\n\nstruct curl_slist *headers = NULL;\nheaders = curl_slist_append(headers, \"authorization: Bearer REPLACE_BEARER_TOKEN\");\ncurl_easy_setopt(hnd, CURLOPT_HTTPHEADER, headers);\n\nCURLcode ret = curl_easy_perform(hnd);"
           }
         ]
       }
